--- a/Projects/Proj1_REV2/proj1.build_log.htm
+++ b/Projects/Proj1_REV2/proj1.build_log.htm
@@ -21,19 +21,19 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.14.14.0
  
 <h2>Project:</h2>
-Z:\Documents\Real-Time-and-Embedded-Systems\Projects\Proj1_REV2\proj1.uvprojx
-Project File Date:  02/14/2017
+Z:\Real-Time-and-Embedded-Systems\Projects\Proj1_REV2\proj1.uvprojx
+Project File Date:  02/15/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
-compiling LED.c...
 compiling binSearch.c...
 compiling input_pa0_test.c...
-compiling sort.c...
+compiling LED.c...
 compiling SysClock.c...
+compiling sort.c...
 compiling main.c...
-main.c(41): warning:  #223-D: function "POST" declared implicitly
+main.c(42): warning:  #223-D: function "POST" declared implicitly
           return POST();
 main.c: 1 warning, 0 errors
 assembling startup_stm32l476xx.s...
@@ -52,14 +52,14 @@ Package Vendor: ARM
    * Component: CORE Version: 4.3.0
 
 <h2>Collection of Component include folders:</h2>
-  Z:\Documents\Real-Time-and-Embedded-Systems\Projects\Proj1_REV2\RTE
+  Z:\Real-Time-and-Embedded-Systems\Projects\Proj1_REV2\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.5.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32L4xx_DFP\1.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
