--- a/Projects/Proj6/Keil/Objects/proj6.build_log.htm
+++ b/Projects/Proj6/Keil/Objects/proj6.build_log.htm
@@ -26,17 +26,18 @@ Project File Date:  05/08/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-compiling SysClock.c...
-compiling LED.c...
-compiling proj6.c...
-assembling startup_stm32l476xx.s...
+Build target 'Target 1'
 compiling TIMER.c...
-compiling UART.c...
+compiling proj6.c...
+proj6.c(39): warning:  #223-D: function "round" declared implicitly
+                  rounded_ccr = round(fine_ccr);
+proj6.c(19): warning:  #550-D: variable "scaled_back_voltage" was set but never used
+  		double scaled_back_voltage;
+proj6.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=1652 RO-data=424 RW-data=24 ZI-data=1632  
+Program Size: Code=4604 RO-data=408 RW-data=0 ZI-data=1632  
 FromELF: creating hex file...
-".\Objects\proj6.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\proj6.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
