--- a/Projects/Proj6/Keil/Objects/proj6.build_log.htm
+++ b/Projects/Proj6/Keil/Objects/proj6.build_log.htm
@@ -32,14 +32,15 @@ compiling LED.c...
 compiling proj6.c...
 proj6.c(45): warning:  #223-D: function "round" declared implicitly
               rounded_ccr = round(fine_ccr);
-proj6.c(20): warning:  #550-D: variable "n" was set but never used
-      int n;
-proj6.c: 2 warnings, 0 errors
+proj6.c: 1 warning, 0 errors
 assembling startup_stm32l476xx.s...
 compiling UART.c...
 compiling TIMER.c...
+TIMER.c(41): warning:  #177-D: variable "x" was declared but never referenced
+      int x;
+TIMER.c: 1 warning, 0 errors
 linking...
-Program Size: Code=4708 RO-data=408 RW-data=0 ZI-data=1736  
+Program Size: Code=4604 RO-data=408 RW-data=0 ZI-data=1688  
 FromELF: creating hex file...
 ".\Objects\proj6.axf" - 0 Error(s), 2 Warning(s).
 
@@ -59,7 +60,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
