Working but atrocious

--- a/Projects/Proj6/Keil/Objects/proj6.build_log.htm
+++ b/Projects/Proj6/Keil/Objects/proj6.build_log.htm
@@ -31,8 +31,10 @@ compiling SysClock.c...
 compiling LED.c...
 compiling proj6.c...
 proj6.c(45): warning:  #223-D: function "round" declared implicitly
-              rounded_ccr = round(fine_ccr);
-proj6.c: 1 warning, 0 errors
+                rounded_ccr = round(fine_ccr);
+proj6.c(24): warning:  #550-D: variable "rounded_ccr" was set but never used
+      int rounded_ccr;
+proj6.c: 2 warnings, 0 errors
 assembling startup_stm32l476xx.s...
 compiling UART.c...
 compiling TIMER.c...
@@ -40,9 +42,9 @@ TIMER.c(41): warning:  #177-D: variable "x" was declared but never referenced
       int x;
 TIMER.c: 1 warning, 0 errors
 linking...
-Program Size: Code=4604 RO-data=408 RW-data=0 ZI-data=1688  
+Program Size: Code=8888 RO-data=584 RW-data=0 ZI-data=1688  
 FromELF: creating hex file...
-".\Objects\proj6.axf" - 0 Error(s), 2 Warning(s).
+".\Objects\proj6.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -60,7 +62,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
